Fixed CocktailGrid Layout Issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -108,17 +108,6 @@ nav .button-secondary:hover {
     padding-right: calc(var(--hover-arrow-move-distance));
 }
 
-.button-primary.outside-nav:hover {
-    background-color: var(--primary);
-    border: 1px solid var(--secondary);
-    color: var(--text-primary);
-}
-
-.button-secondary.outside-nav:hover {
-    background-color: var(--secondary);
-    color: var(--primary);
-}
-
 .button-primary,
 .button-secondary {
     padding: var(--button-padding);
@@ -156,8 +145,7 @@ nav .button-secondary:hover {
     color: var(--primary);
 }
 
-.button-category,
-.button-category.active:hover {
+.button-category {
     background-color: var(--text-primary);
     color: var(--primary);
     border: 1px solid transparent;
